metadata1/unpackaged/objects/Customer_Survey__c.object
<CustomObject>
    <fields>
        <fullName>API_Full_Text__c</fullName>
        <label>API Full Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>API_Link__c</fullName>
        <label>API Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Response__c</fullName>
        <label>API Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATI_Job__c</fullName>
        <label>ATI Job</label>
        <referenceTo>ATI_Job__c</referenceTo>
        <relationshipLabel>Customer Surveys</relationshipLabel>
        <relationshipName>Customer_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ATI_Overall_Experience__c</fullName>
        <description>Question 9:  Please rate your overall experience with the ATI [Division] team.</description>
        <inlineHelpText>Please rate your overall experience with the ATI [Division] team.</inlineHelpText>
        <label>ATI Overall Experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATI_Team__c</fullName>
        <description>Question 8 :  Was the ATI team courteous, organized, and professional?</description>
        <inlineHelpText>Was the ATI team courteous, organized, and professional?</inlineHelpText>
        <label>ATI Team</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>ATI_Job__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Address__c</fullName>
        <label>Agency Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Email__c</fullName>
        <label>Agent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agent_Phone__c</fullName>
        <label>Agent Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>All_deficiencies_addressed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All deficiencies addressed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_for_Improvment__c</fullName>
        <description>Survey Question 11. Area for Improvement - In what area(s) do you think American Technologies, Inc. fell short of your expectations?</description>
        <label>Area for Improvment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Branch_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Branch Manager lookup field populated via Process Builder flow &apos;Branch Manager Population onto Survey&apos; from associated Job record, in order to send them an email alert when there is a poor survey score related to a job originating in their office.</description>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Surveys6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Construction_Office_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Construction Office Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Surveys6SuY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consulting_Report__c</fullName>
        <inlineHelpText>Was the consulting deliverable (estimate, report, or analysis) accurate?</inlineHelpText>
        <label>Consulting Report</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consulting_Satisfied__c</fullName>
        <inlineHelpText>Was the consulting deliverable submitted in a timely fashion?</inlineHelpText>
        <label>Consulting Satisfied</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consulting_Submitted__c</fullName>
        <inlineHelpText>Overall, how satisfied were you with the consulting deliverable?</inlineHelpText>
        <label>Consulting Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crew_supervisor_was_involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Crew supervisor was involved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Service</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Surveysj4oJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Survey_Getfeedback_Match__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Customer Survey Getfeedback Match</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Follow_Up_Discussion_with_Client__c</fullName>
        <description>Date of ATI management call with property owner or representative to discuss the situation and attempt to rectify the problem.</description>
        <label>Date of Follow-Up Discussion with Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detractor__c</fullName>
        <formula>IF(NPS__c &lt; 7, 1, 0)</formula>
        <label>Detractor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disciplinary_action_description__c</fullName>
        <inlineHelpText>Advise when action was or will be taken, issue addressed, and to whom disciplinary action was issued.</inlineHelpText>
        <label>Disciplinary action description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disciplinary_action_needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disciplinary action needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>TEXT(ATI_Job__r.Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVP_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>EVP 1 field populated via Process Builder from the associated Office record</description>
        <label>EVP 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Surveys7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EVP_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>EVP 2 field populated via Process Builder from the associated Office record</description>
        <label>EVP 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Surveys8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Response__c</fullName>
        <label>Email Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Environmental_Branch_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environmental Branch Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_SurveysQmAB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <description>Survey Question 7. Estimate - The Project Manager created a detailed and thorough estimate.</description>
        <label>Estimate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Excellent_Service__c</fullName>
        <description>Survey Question 13. Do you have any suggestions for improving our services?</description>
        <label>Excellent Service</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Explanation_of_unresolved_deficiencies__c</fullName>
        <label>Explanation of unresolved deficiencies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Agency__c</fullName>
        <label>Insurance Agency</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Agent__c</fullName>
        <description>Survey Question 14. Do you recall the name and contact information of your insurance agent who sold you your insurance policy? If you&apos;re able to provide this information, American Technologies, Inc. will make a donation to the American Red Cross Disaster Relief Fund.</description>
        <label>Insurance Agent</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <formula>ATI_Job__r.Job_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Team_Account_Executive_1__c</fullName>
        <label>Job Team Account Executive 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Job_Team_Account_Executive_2__c</fullName>
        <label>Job Team Account Executive 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Learnings_leveraged_and_shared__c</fullName>
        <inlineHelpText>List any learnings leveraged and shared in a general sense to prevent a similar situation from occurring in the future. Maintain confidentiality as needed.</inlineHelpText>
        <label>Learnings leveraged and shared</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Likely_to_Recommend__c</fullName>
        <description>Survey Question 9. Likely to Recommend - I am likely to recommend American Technologies, Inc. to a friend/colleague.</description>
        <label>Likely to Recommend</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Main_Complaints__c</fullName>
        <label>Main Complaints</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Professionalism</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Follow-through/Follow-up</fullName>
                </value>
                <value>
                    <fullName>Appearance</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Cleanliness</fullName>
                </value>
                <value>
                    <fullName>Workmanship</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Scheduling</fullName>
                </value>
                <value>
                    <fullName>Accessibility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Surveys4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <description>Question 10:  How likely is it that you would recommend ATI to a friend, family member, or colleague?</description>
        <inlineHelpText>How likely is it that you would recommend ATI to a friend, family member, or colleague?</inlineHelpText>
        <label>NPS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Office Manager field populated via Process Builder from the associated Office record</description>
        <label>Office Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Surveys9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <formula>ATI_Job__r.Office2__r.Name</formula>
        <label>Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Surveys3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Opportunity object</description>
        <label>Job</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Surveys</relationshipLabel>
        <relationshipName>Customer_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organized_and_Professional__c</fullName>
        <description>Survey Question 4. Organized and Professional - Each member of the ATI team was organized and displayed professionalism in each interaction. He/she adequately explained the process to me and showed his/her detailed knowledge of the services to be provided.</description>
        <label>Organized and Professional</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Complaints__c</fullName>
        <label>Other Complaints</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Consultant_Score__c</fullName>
        <formula>IF(Overall_Score_Percent__c &gt;0.0, Overall_Score_Percent__c, 
(( PD_Communication__c + PD_Responsive__c + PD_Overall__c +  Consulting_Report__c  +  Consulting_Submitted__c  +  Consulting_Satisfied__c  + NPS__c ) / 7) / 10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Consultant Score %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Overall_Score_10pt_Percent__c</fullName>
        <formula>IF(Overall_Score_Percent__c &gt;0.0, Overall_Score_Percent__c,
(( PD_Communication__c +  PD_Responsive__c +  PD_Overall__c +  PM_Communication__c +  PM_Responsive__c +  PM_Monitor__c +  PM_Overall__c +  ATI_Team__c +  ATI_Overall_Experience__c  + NPS__c ) / 10) / 10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Score (10pt) Percent</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Overall_Score_Percent__c</fullName>
        <formula>((Staff_Courteous_and_Helpful__c + Staff_Accessibility__c + Team_Appearance__c + Organized_and_Professional__c + Schedule__c + Quality_of_Workmanship__c + Estimate__c + Satisfactory_Work_Completion__c + Likely_to_Recommend__c ) / 9) / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Score Percent</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PD_Communication__c</fullName>
        <description>Question 1:  During your [Division] project, did [Project Director] effectively communicate the expectations of the job and the process involved?</description>
        <inlineHelpText>During your [Division] project, did [Project Director] effectively communicate the expectations of the job and the process involved?</inlineHelpText>
        <label>PD Communication</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PD_Overall_Score__c</fullName>
        <formula>IF(Overall_Score_Percent__c &gt;0.0, Overall_Score_Percent__c,
(PD_Communication__c + PD_Responsive__c + PD_Overall__c + ATI_Team__c + ATI_Overall_Experience__c + NPS__c)/6/10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PD Overall Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PD_Overall__c</fullName>
        <description>Question 3: Overall, how satisfied were you with the service provided by [Project Director] during the [Division] phase of your project?</description>
        <inlineHelpText>Overall, how satisfied were you with the service provided by [Project Director] during the [Division] phase of your project?</inlineHelpText>
        <label>PD Overall</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PD_Responsive__c</fullName>
        <description>Question 2: Was [Project Director] responsive to you and answer all of your questions in a timely manner?</description>
        <inlineHelpText>Was [Project Director] responsive to you and answer all of your questions in a timely manner?</inlineHelpText>
        <label>PD Responsive</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Communication__c</fullName>
        <description>Question 4: Did [Project Manager] communicate a schedule with you for the [Division] project and did we meet those expectations?</description>
        <inlineHelpText>Did [Project Manager] communicate a schedule with you for the [Division] project and did we meet those expectations?</inlineHelpText>
        <label>PM Communication</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Monitor__c</fullName>
        <description>Question 6: Did [Project Manager] effectively monitor your job for workmanship &amp; cleanliness during your [Division] project?</description>
        <inlineHelpText>Did [Project Manager] effectively monitor your job for workmanship &amp; cleanliness during your [Division] project?</inlineHelpText>
        <label>PM Monitor</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Overall_Score__c</fullName>
        <formula>IF(Overall_Score_Percent__c &gt;0.0, Overall_Score_Percent__c,
(PM_Communication__c + PM_Responsive__c + PM_Monitor__c + PM_Overall__c + ATI_Team__c + ATI_Overall_Experience__c + NPS__c)/7/10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Overall Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PM_Overall__c</fullName>
        <description>Question 7: Overall, how satisfied were you with the service provided by [Project Manager] during the [Division] phase of your project?</description>
        <inlineHelpText>Overall, how satisfied were you with the service provided by [Project Manager] during the [Division] phase of your project?</inlineHelpText>
        <label>PM Overall</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Responsive__c</fullName>
        <description>Question 5: Was [Project Manager] responsive to you and answer all of your questions in a timely manner?</description>
        <inlineHelpText>Was [Project Manager] responsive to you and answer all of your questions in a timely manner?</inlineHelpText>
        <label>PM Responsive</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passive__c</fullName>
        <formula>IF(AND(NPS__c &gt; 6, NPS__c &lt; 9), 1, 0)</formula>
        <label>Passive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_of_action_for_reoccurring_concern__c</fullName>
        <label>Plan of action for reoccurring concern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Surveys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager_new__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Surveysol4f</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Site_Contact_Corrected_Email__c</fullName>
        <formula>ATI_Job__r.Add_Correct_Email__c</formula>
        <label>Project Site Contact Corrected Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Contact_Email__c</fullName>
        <formula>ATI_Job__r.Project_Site_Contact_Email__c</formula>
        <label>Project Site Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Contact_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Site Contact lookup field populated via Process Builder flow &apos;Project Site Contact Population onto Customer Survey&apos; from associated Job record, in order to send them an email alert thanking them for their participation in an ATI survey.</description>
        <label>Project Site Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Surveys</relationshipLabel>
        <relationshipName>Customer_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Site_Contact__c</fullName>
        <formula>ATI_Job__r.Project_Site_Contact_Name__r.FirstName  &amp; &quot; &quot; &amp;  ATI_Job__r.Project_Site_Contact_Name__r.LastName</formula>
        <label>Project Site Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promoter__c</fullName>
        <formula>IF(NPS__c &gt; 8, 1, 0)</formula>
        <label>Promoter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_of_Workmanship__c</fullName>
        <description>Survey Question 6. Quality of Workmanship - I am satisfied with the quality of materials used and workmanship displayed on my/our project.</description>
        <label>Quality of Workmanship</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_and_Waiver__c</fullName>
        <description>Survey Question 10. Reference and Waiver - American Technologies, Inc. may use me as a reference and I authorize them to use the contents of this survey in advertising, promotional materials, and references.  I further authorize ATI to use and publish my name, company (if applicable), city, and state in connection with this survey.</description>
        <inlineHelpText>ATI may use me as a reference and I authorize them to use the contents of this survey in advertising, promotional materials, and references.  I further authorize ATI to use and publish my name, company (if applicable), city, and state in connection with</inlineHelpText>
        <label>Reference and Waiver</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Regional Manager field populated via Process Builder from the associated Office record</description>
        <label>Regional Manager (DEL)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_SurveyswjaO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reoccurring_concern_for_this_ATI_person__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this is a reoccurring concern raised on different surveys for the same person or situation.</inlineHelpText>
        <label>Reoccurring concern for this ATI person?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Type_Email__c</fullName>
        <label>Response Type Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_Type_SMS__c</fullName>
        <label>Response Type SMS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Type__c</fullName>
        <formula>IF( Response_Type_Email__c &lt;&gt; null,Response_Type_Email__c , Response_Type_SMS__c )</formula>
        <label>Response Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Response__c</fullName>
        <label>SMS Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Satisfactory_Work_Completion__c</fullName>
        <description>Survey Question 8. Satisfactory Work Completion - The work was completed to my satisfaction.</description>
        <label>Satisfactory Work Completion</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <description>Survey Question 5. Schedule - American Technologies, Inc. adhered to our agreed upon schedule.</description>
        <label>Schedule</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>(Staff_Courteous_and_Helpful__c  +  Staff_Accessibility__c  +  Team_Appearance__c  +  Organized_and_Professional__c  +  Schedule__c  +  Quality_of_Workmanship__c  +  Estimate__c  +  Satisfactory_Work_Completion__c  +  Likely_to_Recommend__c ) / 9</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <description>Question 12: Tell us what you think of the service you received from ATI.  In what area(s) were you most satisfied with your experience and why?  How can we improve?  Is there anyone at American Technologies, Inc. you would like to recognize for having provided exceptional customer service?</description>
        <inlineHelpText>Tell us what you think of the service you received from ATI.  In what area(s) were you most satisfied with your experience and why?  How can we improve?  Is there anyone at ATI you would like to recognize for having provided exceptional customer service?</inlineHelpText>
        <label>Service</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Staff_Accessibility__c</fullName>
        <description>Survey Question 2. Staff Accessibility - ATI staff was accessible and responsive to my request. I was contacted within 24 hours of my inquiry.</description>
        <label>Staff Accessibility</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Staff_Courteous_and_Helpful_Score__c</fullName>
        <formula>If( Staff_Courteous_and_Helpful__c =5, &quot;Strongly Agree&quot;,
If( Staff_Courteous_and_Helpful__c =4, &quot;Agree&quot;,
If( Staff_Courteous_and_Helpful__c =3, &quot;Neutral&quot;,
If( Staff_Courteous_and_Helpful__c =2, &quot;Disagree&quot;,
If( Staff_Courteous_and_Helpful__c =1, &quot;Strongly Disagree&quot;,&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Courteous and Helpful Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Courteous_and_Helpful__c</fullName>
        <description>Survey Question 1. Staff Courteous and Helpful - The ATI staff was courteous and helpful at all times</description>
        <label>Staff Courteous and Helpful</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suggestions__c</fullName>
        <description>Survey Question 13. Do you have any suggestions for improving our services?</description>
        <inlineHelpText>Do you have any suggestions for improving our services?</inlineHelpText>
        <label>Suggestions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary_of_Discussion_with_Client__c</fullName>
        <label>Summary of Discussion with Client</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Super_Ops__c</fullName>
        <description>Changed from Opportunity: Super_Ops to Project_Manager_New_Full_Name__c</description>
        <formula>ATI_Job__r.Project_Manager_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Super_Ops</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Superintendent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Superintendent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Surveys2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Created_Count__c</fullName>
        <formula>if( CreatedDate  &lt;&gt; null,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Created Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional recipients that need to be emailed the survey responses via the &apos;New Survey Notification&apos; workflow—This field is populated via code.</description>
        <label>Survey Recipient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Surveys5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_completed_by_appropriate_person__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the person who completed the customer survey was the appropriate person to be answering the survey questions. For example, they would be an appropriate person if they were the on-site contact at the job site.</inlineHelpText>
        <label>Survey completed by appropriate person?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Appearance__c</fullName>
        <description>Survey Question 3. Team Appearance - Each member of the ATI team was groomed and dressed appropriately at all times.</description>
        <label>Team Appearance</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Update__c</fullName>
        <label>Test Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Survey</label>
    <listViews>
        <fullName>All_Surveys</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Overall_Score_10pt_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Surveys</label>
    </listViews>
    <listViews>
        <fullName>Consultant_Surveys</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Job_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Office__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Manager_new__c</columns>
        <columns>Overall_Score_10pt_Percent__c</columns>
        <columns>Overall_Consultant_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>Division__c</field>
            <operation>equals</operation>
            <value>Consulting</value>
        </filters>
        <label>Consultant Surveys</label>
    </listViews>
</CustomObject>